panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__functions__test_error_function_defined_without_name.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/functions/test_error_function_defined_without_name.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: function defined without a name
   ╭─[panko/tests/cases/functions/test_error_function_defined_without_name.c:1:1]
   │
 1 │ int() {
   │ ──┬──  
   │   ╰──── this definition lacks a name
───╯
